<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neo_simulation2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="padhupradheep@gmail.com">pradheep</maintainer>
  <license>TODO: License declaration</license>

   <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <!-- <exec_depend>nav2_bringup</exec_depend> -->
  <build_depend>nav2_bringup</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
